Affichage des meilleurs ventes et des nouveautées uniquement si les infos sont correctement remontées par les WS. Ref. #2

--- a/front/al-geek-front/src/main/resources/META-INF/resources/home.xhtml
+++ b/front/al-geek-front/src/main/resources/META-INF/resources/home.xhtml
@@ -20,7 +20,7 @@
 		<div class="homeProduitsContainer">
 			
 			<div class="homeProduits">
-				<ui:repeat value="#{homeBean.nouveautes}" var="p">
+				<ui:repeat value="#{homeBean.nouveautes}" var="p" rendered="#{homeBean.nouveautes != null}">
 					<div class="carteProduit">
 						<h:commandLink class="clink"
 							action="#{ficheProduitBean.afficherProduit(p.id)}">
@@ -55,7 +55,7 @@
 		<div class="homeProduitsContainer">
 		
 			<div class="homeProduits">
-				<ui:repeat value="#{homeBean.meilleuresVentes}" var="p">
+				<ui:repeat value="#{homeBean.meilleuresVentes}" var="p" rendered="#{homeBean.meilleuresVentes != null}">
 					<div class="carteProduit">
 						<h:commandLink class="clink"
 							action="#{ficheProduitBean.afficherProduit(p.id)}">
