--- a/front/al-geek-front/src/main/resources/META-INF/resources/espaceperso.xhtml
+++ b/front/al-geek-front/src/main/resources/META-INF/resources/espaceperso.xhtml
@@ -64,6 +64,12 @@
 							<h:inputText class="champInfo"
 								value="#{connectBean.client.ville}" />
 						</div>
+						<div class="infosP">
+							<h:outputText value="#{connectBean.customerMeteo.city}"/>
+							<h:graphicImage class="photo" value="IMG/#{connectBean.customerMeteo.photo}"/>
+							<h:outputText value="#{connectBean.customerMeteo.temperature}"/><br/>
+							<h:outputText value="#{connectBean.customerMeteo.description}"/>
+						</div>
 					</div>
 				</div>
 				<div class="msgModif">
