modif css meteo

--- a/front/al-geek-front/src/main/resources/META-INF/resources/espaceperso.xhtml
+++ b/front/al-geek-front/src/main/resources/META-INF/resources/espaceperso.xhtml
@@ -64,7 +64,7 @@
 							<h:inputText class="champInfo"
 								value="#{connectBean.client.ville}" />
 						</div>
-						<div class="infosP">
+						<div class="weatherBox">
 							<h:outputText value="#{connectBean.customerMeteo.city}"/>
 							<h:graphicImage class="photo" value="IMG/#{connectBean.customerMeteo.photo}"/>
 							<h:outputText value="#{connectBean.customerMeteo.temperature}"/><br/>
